# tauri-plugin-audio

./: Cargo.toml  README.md  build.rs  package.json
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: AudioPlugin.swift
ios/Tests/PluginTests/: AudioPluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: enqueue_audio.toml  get_playback_levels.toml  get_playback_progress.toml  init_session.toml  teardown_session.toml
permissions/schemas/: schema.json
src/: analyzer.rs  capture_queue.rs  commands.rs  desktop.rs  error.rs  ffi.rs  lib.rs  mobile.rs  models.rs
