[package]
name = "tauri-plugin-audio"
version = "0.1.0"
authors = ["Affex Team"]
description = "Native audio capture and playback plugin for Tauri with lock-free FFI audio paths"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-audio"
keywords = [
    "tauri",
    "audio",
    "capture",
    "playback",
    "native",
]
categories = ["multimedia::audio", "api-bindings"]

[dependencies]
tauri = { version = "2.9.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
log = "0.4"
ringbuf = "0.4"
tokio = { version = "1", features = ["sync", "time"] }

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
cpal = "0.15"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
